Itinarary Page Changes
New class added to read the onward Journey and retrun journey details from Itinerary Page

--- a/Exercise/output/report.html
+++ b/Exercise/output/report.html
@@ -48,7 +48,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jun 2, 2018 04:54:44 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jun 3, 2018 01:04:28 AM</span>
 				</a>
 			</li>
 			<li>
@@ -165,7 +165,7 @@
 					<canvas id='grandchild-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>12</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>13</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
 					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -185,12 +185,12 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Acceptance testing.</span>
-						<span class='test-time'>Jun 2, 2018 04:54:44 PM</span>
+						<span class='test-time'>Jun 3, 2018 01:04:28 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='scenariooutline node' test-id='2' status='pass'>
-	<span class='duration right label'>0h 1m 55s+888ms</span>
+	<span class='duration right label'>0h 1m 41s+294ms</span>
 	<div class='desc'>
 		<b>ScenarioOutline</b>
 		<span class="desc-text">Validate ticketBooking</span>
@@ -238,8 +238,8 @@
 					<li test-id='11' class='node then pass' status='pass'><b>Then</b>
 						<span class="bdd-step-name">Then I select 2 Flight and 2 flight to book tickets</span>
 						<ul class='screenshots right'>
-							<li><a data-featherlight="image" href="C:\DBS_Projects\WorkSpaces\Paylah_SeeTest_May2018\Exercise\output\beforeSelect.png"><i class='material-icons'>panorama</i></a></li>
-							<li><a data-featherlight="image" href="C:\DBS_Projects\WorkSpaces\Paylah_SeeTest_May2018\Exercise\output\AfterSelect.png"><i class='material-icons'>panorama</i></a></li>
+							<li><a data-featherlight="image" href="E:\GitHubRepo_ShivOletiEmail\Selenium-Cucumber\Exercise\output\beforeSelect.png"><i class='material-icons'>panorama</i></a></li>
+							<li><a data-featherlight="image" href="E:\GitHubRepo_ShivOletiEmail\Selenium-Cucumber\Exercise\output\AfterSelect.png"><i class='material-icons'>panorama</i></a></li>
 						</ul>
 							<div class='pre'>Selecting 2Flight</div>
 							<div class='pre'>Selecting 2Flight</div>
@@ -254,9 +254,9 @@
 						<span class="bdd-step-name">Then I read departure Flights 2 rowData</span>
 							<div class='pre'>Flight Details</div>
 							<div class='pre'>vendor:Air Asia</div>
-							<div class='pre'>depart:14:10</div>
-							<div class='pre'>arrive:15:30</div>
-							<div class='pre'>duration:1h 20m</div>
+							<div class='pre'>depart:07:35</div>
+							<div class='pre'>arrive:08:30</div>
+							<div class='pre'>duration:55m</div>
 							<div class='pre'>price :Rs.10,600</div>
 							<div class='pre'>passed</div>
 					</li>
@@ -273,8 +273,16 @@
 					<li test-id='15' class='node then pass' status='pass'><b>Then</b>
 						<span class="bdd-step-name">Then I Book the Tickets</span>
 						<ul class='screenshots right'>
-							<li><a data-featherlight="image" href="C:\DBS_Projects\WorkSpaces\Paylah_SeeTest_May2018\Exercise\output\reivewPage.png"><i class='material-icons'>panorama</i></a></li>
+							<li><a data-featherlight="image" href="E:\GitHubRepo_ShivOletiEmail\Selenium-Cucumber\Exercise\output\reivewPage.png"><i class='material-icons'>panorama</i></a></li>
 						</ul>
+							<div class='pre'>passed</div>
+					</li>
+					<li test-id='16' class='node then pass' status='pass'><b>Then</b>
+						<span class="bdd-step-name">Then I read ItenaryDetails</span>
+							<div class='pre'>Search Page onWard Flight Details:[Air Asia, 07:35, 08:30, 55m, Rs.10,600]</div>
+							<div class='pre'>Itinerary Page onWard Flight Details:[Air Asia, HYD 07:35, 55m, 08:30 BLR]</div>
+							<div class='pre'>Search Page onWard Flight Details:[Jet Airways, 07:30, 09:10, 1h 40m, Rs.9,572]</div>
+							<div class='pre'>Itinerary Page return Flight Details:[Jet Airways, BLR 07:30, 1h 40m, 09:10 HYD]</div>
 							<div class='pre'>passed</div>
 					</li>
 				</ul>
@@ -358,12 +366,12 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Jun 2, 2018 04:54:44 PM</td>
+										<td>Jun 3, 2018 01:04:28 AM</td>
 										<td class='linked' test-id='1'>Acceptance testing.</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Jun 2, 2018 04:54:44 PM</td>
+										<td>Jun 3, 2018 01:04:28 AM</td>
 										<td class='linked' test-id='3'>Acceptance testing..Validate ticketBooking.Validate ticketBooking</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -397,7 +405,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Jun 2, 2018 04:54:44 PM</td>
+										<td>Jun 3, 2018 01:04:28 AM</td>
 										<td class='linked' test-id='3'>Acceptance testing..Validate ticketBooking.Validate ticketBooking</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -439,25 +447,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>12</div>
+					<div class='panel-lead'>13</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jun 2, 2018 04:54:44 PM</div>
+					<div class='panel-lead'>Jun 3, 2018 01:04:28 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jun 2, 2018 04:56:41 PM</div>
+			 		<div class='panel-lead'>Jun 3, 2018 01:06:12 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 1m 57s+152ms</div>
+					<div class='panel-lead'>0h 1m 44s+136ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -471,7 +479,7 @@
 						</tr>
 							<tr>
 								<td>user</td>
-								<td>shivaoleti</td>
+								<td>indian</td>
 							</tr>
 							<tr>
 								<td>os</td>
@@ -549,7 +557,7 @@
 				infoChild: 0,
 				exceptionsChild: 0,
 				
-				passGrandChild: 12,
+				passGrandChild: 13,
 				failGrandChild: 0,
 				fatalGrandChild: 0,
 				errorGrandChild: 0,
