--- a/Exercise/test-output/index.html
+++ b/Exercise/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\DBS_Projects\WorkSpaces\Paylah_SeeTest_May2018\Exercise\src\test\resources\runner\testng.xml</span>
+                    <span>E:\GitHubRepo_ShivOletiEmail\Selenium-Cucumber\Exercise\src\test\resources\runner\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -138,7 +138,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\DBS_Projects\WorkSpaces\Paylah_SeeTest_May2018\Exercise\src\test\resources\runner\testng.xml</span>
+            <span class="header-content">E:\GitHubRepo_ShivOletiEmail\Selenium-Cucumber\Exercise\src\test\resources\runner\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -199,7 +199,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
 data.setCell(0, 2, 'runners.Runner')
-data.setCell(0, 3, 117211);
+data.setCell(0, 3, 104396);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -237,19 +237,19 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">518 ms</span>
+                <span class="method-start">292 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">feature(Acceptance testing.)</span>
-                <span class="method-start">667 ms</span>
+                <span class="method-start">396 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">117882 ms</span>
+                <span class="method-start">104796 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">117929 ms</span>
+                <span class="method-start">104821 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
