--- a/Exercise/test-output/old/Suite/methods.html
+++ b/Exercise/test-output/old/Suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b7f67">  <td>18/06/02 16:54:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:runners.Runner@14b1c02]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@13893707</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>18/06/02 16:54:44</td>   <td>510</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Runner.setup()[pri:0, instance:runners.Runner@14b1c02]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@13893707</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>18/06/02 16:54:44</td>   <td>659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:runners.Runner@14b1c02]">feature</td> 
-  <td>main@13893707</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>18/06/02 16:56:41</td>   <td>117875</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Runner.teardown()[pri:0, instance:runners.Runner@14b1c02]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@13893707</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>18/06/02 16:56:41</td>   <td>117921</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runners.Runner@14b1c02]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@13893707</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>18/06/03 01:04:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:runners.Runner@7cd62f43]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/06/03 01:04:27</td>   <td>288</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Runner.setup()[pri:0, instance:runners.Runner@7cd62f43]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>18/06/03 01:04:27</td>   <td>392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:runners.Runner@7cd62f43]">feature</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/06/03 01:06:12</td>   <td>104792</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Runner.teardown()[pri:0, instance:runners.Runner@7cd62f43]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>18/06/03 01:06:12</td>   <td>104818</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runners.Runner@7cd62f43]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
 </table>
